--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,5 @@ FakesAssemblies/
 !**/UbiSam.GEM.Sample.CSharp.pdb
 !**/Ubisam.GEM.Sample.VBnet.pdb
 !**/UbisamGEMSampleCPP.rc
+!**/Ubisam.GEM.Sample.CPP.vcxproj.user
+!**/UbisamGEMSampleCPP.aps
